# ZeroVault

./: .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: database.py  init_db.py  main.py  models.py
backend/app/api/v1/: admin.py  auth.py  secrets.py  users.py
backend/app/core/: security.py
backend/app/schemas/: __init__.py  auth.py
backend/tests/: test_auth.py
docker/: nginx.conf  postgres.conf
docs/: ACCESO.md  Hoja de ruta.md
docs/Fases/: Fase 1.md  Fase 2.md  Fase 3.md  Fase 4.md  Fase 5.md  Fase 6.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  router.js
frontend/src/crypto/: vaultCrypto.js
frontend/src/views/: AdminDashboard.vue  LoginView.vue  VaultDashboard.vue
